--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-.container{
+.container {
     text-align: center;
     white-space: nowrap;
 }
-ul{
+
+#div-main {
+    display: flex;
+    /*Con esto se alinean*/
+    justify-content: center;
+    align-items: center;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
+}
+
+ul li {
+    margin-right: 10px;
 }
