--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .container {
+    background-color: black;
     text-align: center;
     white-space: nowrap;
 }
@@ -14,7 +15,10 @@ ul {
     list-style-type: none;
     padding: 0;
 }
-
+#id-inicio,#id-combos,#id-cartelera {
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 ul li {
     margin-right: 10px;
 }
