--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     text-align: center;
     white-space: nowrap;
 }
-
 #nav-main {
     display: flex;
     justify-content: center;
@@ -21,23 +20,43 @@ ul {
 ul li {
     margin-right: 10px;
 }
-/* Estilo para las imágenes */
-.img {
-    display: none; /* Ocultamos todas las imágenes por defecto */
-    max-width: 100%; /* Ancho máximo para asegurar que las imágenes no se extiendan más allá del contenedor */
-    height: auto; /* Permitimos que la altura de las imágenes se ajuste automáticamente */
+
+.carousel-image {
+    width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
+    height: auto; /* Ajusta la altura automáticamente para mantener el aspect ratio */
+    object-fit: cover; /* Cubre el contenedor con la imagen */
+    object-position: center; /* Centra la imagen dentro del contenedor */
 }
-.page {
-    display: flex; /* Utilizamos flexbox para alinear los elementos en línea */
-    justify-content: center; /* Centramos los elementos horizontalmente */
-    align-items: center; /* Centramos los elementos verticalmente */
-    margin-top: 20px; /* Espacio superior para separar del contenido superior */
+.contenedorImagenCartelera{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw; /* Ancho de 40vw */
+    min-width: 480px; /* Mínimo ancho de 300px */
+    height: auto;
+    aspect-ratio: 16/9;
+    position: relative; /* Agregamos posición relativa al contenedor */
+    overflow: hidden; /* Recortar cualquier parte de la imagen que sobresalga del contenedor */
+}
+.btnA,.btnS {
+    background-color: rgba(255, 255, 255, 0.197);
+    color: rgb(0, 0, 0);
+    height: 100%; /* El botón ocupa toda la altura del contenedor */
+    width: 3.5vw; /* Ancho deseado para los botones */
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 1;
+    border-radius: 20px; /* Aplicamos el redondeo al contenedor padre */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    user-select: none;
+}
+.btnA {
+    left: 0; /* Botón izquierdo */
 }
 
-button {
-    margin: 0 10px;
-    padding: 5px 10px;
-}
-.contenedorImagen{
-    overflow: hidden;
+.btnS {
+    right: 0; /* Botón derecho */
 }
