--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
 ul li {
     margin-right: 10px;
 }
-#id-inicio,#id-combos,#id-cartelera {
+#id-inicio,#id-combos,#id-cartelera,b,h2{
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -29,7 +29,7 @@ body{
 .carousel-image {
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
 }
-.IniciocontenedorImagenCartelera{
+.contenedorImagenCartelera{
     margin-left: auto;
     margin-right: auto;/*con left y right centro el div*/
     width: 70%; 
