--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     max-height: 100px;
 }
 .LogoNav{
+    margin-right: 30px;
     max-height: 100px;
 }
 #nav-main {
@@ -24,10 +25,11 @@ ul li {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 body{
-    background-color: black;
+    background-color: #584747;
 }
 .carousel-image {
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
+    box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
 }
 .contenedorImagenCartelera{
     margin-left: auto;
@@ -66,6 +68,30 @@ body{
 #GaleriaPoster li {
     margin-right: 10px; /* Esto añade un margen a la derecha de cada elemento li */
     color: white;
+}
+#id-combos{
+
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    background-color:  #4b3e3e;
+    
+}
+.divC{
+    padding: 40px;
+}
+h2{
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+}
+b{
+    color: black;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+}
+.comboImg{
+    box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
 }
 
 
