--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ ul li {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 body{
-    background-color: #584747;
+    background-color: rgb(148,149,139);
 }
 .carousel-image,.carousel-imagen,.carousel-imagen-combo{
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
@@ -40,6 +40,7 @@ body{
     padding-top: 0%;
     padding-bottom: 0%;
 }
+
 .btnA,.btnS,.btnA1,.btnS1{
     background-color: transparent;
     color: rgb(218, 216, 216);
@@ -70,7 +71,10 @@ body{
     list-style-type: none; /* Esto quita los puntos de la lista */
     padding: 0; /* Esto quita el padding por defecto de la lista */
 }
-
+#GaleriaPosterCartelera {
+    list-style-type: none; /* Esto quita los puntos de la lista */
+    padding: 0; /* Esto quita el padding por defecto de la lista */
+}
 #GaleriaPoster li {
     margin-right: 10px; /* Esto añade un margen a la derecha de cada elemento li */
     color: white;
@@ -80,14 +84,15 @@ body{
     max-width: 80%;
     margin: 0 auto;
     text-align: center;
-    background-color:  #4b3e3e;
+    background-color:  rgb(124, 127, 101);
     
 }
 .divC{
     padding: 40px;
 }
 h2{
-    color: rgb(0, 0, 0);
+    background-color:rgb(42,26,29) ;
+    color: rgb(255, 255, 255);
     font-size: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
 }
@@ -99,5 +104,6 @@ b{
 .comboImg{
     box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
 }
+
 
 
