--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+/*----------------GENERAL-----------------*/
+body{
+    background-color: rgb(148,149,139);
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+ul li {
+    margin-right: 10px;
+}
+.img_Poster{
+    box-shadow:5px 5px 5px rgba(0, 0, 0, 0.329);
+    max-height: 250px;
+}
+#GaleriaPoster li {
+    margin-right: 10px; /* Esto añade un margen a la derecha de cada elemento li */
+    color: white;
+}
+.SubTitulo{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color:rgb(42,26,29) ;
+    color: rgb(255, 255, 255);
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    display: block;
+}
+/*------------------------NAV------------------------*/
 .container {
     background-color: rgb(42,26,29);
     text-align: center;
@@ -13,18 +42,7 @@
     justify-content: center;
     align-items: center;
 }
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-.Titulo-Pelicula{
-    color: black;
-    font-family: 'poppins', sans-serif;
-    font-size: 22px;
-}
-ul li {
-    margin-right: 10px;
-}
+/*------------------------INICIO------------------------*/
 #id-inicio,#id-combos,#id-cartelera,b,h2{
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -36,9 +54,70 @@ ul li {
 #id-inicio:active,#id-combos:active,#id-cartelera:active{
     color: white;
 }
-body{
-    background-color: rgb(148,149,139);
+#sec-inicio .ContenidoPoster #GaleriaPoster .li-texto{
+    display: block; /* acomoda uno encima del otro */
 }
+#GaleriaPoster {
+    display: flex;
+    justify-content: flex-start; /* Esto alinea los elementos al inicio */
+    list-style-type: none; /* Esto quita los puntos de la lista */
+    padding: 0; /* Esto quita el padding por defecto de la lista */
+}
+.ContenidoPoster{
+    display: block;
+    max-width: 82%;
+    margin: 0 auto;
+    text-align: center;
+    background-color:  rgb(124, 127, 101);
+}
+/*-------------------------CARTELERA--------------------------------*/
+.Titulo-Pelicula{
+    color: black;
+    font-family: 'poppins', sans-serif;
+    font-size: 22px;
+}
+.ContenidoCombos{
+    margin-top: 3%;
+}
+#GaleriaPosterCartelera {
+    background-color:rgb(124, 127, 101);
+    list-style-type: none; /* Esto quita los puntos de la lista */
+    padding: 0; /* Esto quita el padding por defecto de la lista */
+    max-width: 90vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.li-texto{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: start;
+    width: 80vw;
+    margin: auto;
+    padding: 2vw;   
+}
+.DescripcionImg{
+    padding: 0px 2rem;
+}
+/*----------------------COMBOS----------------------*/
+.id-combos{
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center; /*Esto centra los divs de dentro*/
+    background-color:  rgb(124, 127, 101);
+}
+.divC{
+    padding: 40px;
+}
+b{
+    color: black;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+}
+.comboImg{
+    box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
+}
+/*----------------------Carrusel----------------------*/
 .carousel-image,.carousel-imagen-combo{
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
     box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
@@ -52,8 +131,22 @@ body{
     padding-top: 0%;
     padding-bottom: 0%;
 }
-.ContenidoCombos{
-    margin-top: 3%;
+.divBotonesCombos{
+    margin-left: 79%;
+    position: absolute;
+    margin-top: -40.4%;
+}
+.btnCarruselCombos{
+    background-color: rgb(42,26,29);
+    color: white;
+    border: none;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+    margin: 1px;
+}
+.btnCarruselCombos:hover{
+    background-color: rgb(71, 41, 47);
 }
 .btnA,.btnS,.btnA1,.btnS1{
     background-color: transparent;
@@ -79,93 +172,3 @@ body{
 .btnA1:hover, .btnS1:hover {/*Se ilumina el lado cuando pasas encima*/
     background-color: rgba(14, 6, 6, 0.068); /* Cambiar el valor de transparencia según lo que desees */
 }
-#GaleriaPoster {
-    display: flex;
-    justify-content: flex-start; /* Esto alinea los elementos al inicio */
-    list-style-type: none; /* Esto quita los puntos de la lista */
-    padding: 0; /* Esto quita el padding por defecto de la lista */
-}
-#GaleriaPosterCartelera {
-    background-color:rgb(124, 127, 101);
-    list-style-type: none; /* Esto quita los puntos de la lista */
-    padding: 0; /* Esto quita el padding por defecto de la lista */
-    max-width: 90vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.li-texto{
-    display: flex;
-    justify-content:space-evenly;
-    align-items: start;
-    width: 80vw;
-    margin: auto;
-    padding: 2vw;   
-}
-.divBotonesCombos{
-    margin-left: 79%;
-    position: absolute;
-    margin-top: -40.4%;
-}
-.btnCarruselCombos{
-    background-color: rgb(42,26,29);
-    color: white;
-    border: none;
-    cursor: pointer;
-    height: 25px;
-    width: 25px;
-    margin: 1px;
-}
-.btnCarruselCombos:hover{
-    background-color: rgb(71, 41, 47);
-}
-#sec-inicio .ContenidoPoster #GaleriaPoster .li-texto{
-    display: block; /* acomoda uno encima del otro */
-}
-.DescripcionImg{
-    padding: 0px 2rem;
-}
-.img_Poster{
-    box-shadow:5px 5px 5px rgba(0, 0, 0, 0.329);
-    max-height: 250px;
-}
-#GaleriaPoster li {
-    margin-right: 10px; /* Esto añade un margen a la derecha de cada elemento li */
-    color: white;
-}
-.id-combos{
-    max-width: 80%;
-    margin: 0 auto;
-    text-align: center; /*Esto centra los divs de dentro*/
-    background-color:  rgb(124, 127, 101);
-}
-.ContenidoPoster{
-    display: block;
-    max-width: 82%;
-    margin: 0 auto;
-    text-align: center;
-    background-color:  rgb(124, 127, 101);
-}
-.divC{
-    padding: 40px;
-}
-.SubTitulo{
-    margin-top: 2%;
-    margin-bottom: 2%;
-    background-color:rgb(42,26,29) ;
-    color: rgb(255, 255, 255);
-    font-size: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-    display: block;
-}
-b{
-    color: black;
-    font-size: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-}
-.comboImg{
-    box-shadow:10px 10px 5px rgba(0, 0, 0, 0.329); 
-}
-
-
-
