--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
 /*----------------GENERAL-----------------*/
 body{
     background-color: rgb(148,149,139);
@@ -23,7 +24,7 @@ ul li {
     background-color:rgb(42,26,29) ;
     color: rgb(255, 255, 255);
     font-size: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    font-family: "Teko"; 
     display: block;
 }
 /*------------------------NAV------------------------*/
@@ -43,9 +44,10 @@ ul li {
     align-items: center;
 }
 /*------------------------INICIO------------------------*/
-#id-inicio,#id-combos,#id-cartelera,b,h2{
+#id-inicio,#id-combos,#id-cartelera,h2{
     color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: "Teko";
+    font-size: 24px;
 }
 #id-inicio,#id-combos,#id-cartelera{
     color: rgba(255, 255, 255, 0.733);
