--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 /*----------------GENERAL-----------------*/
 body{
     background-color: rgb(148,149,139);
+    display: flex;
+    flex-direction: column-reverse;
+    padding-top: 120px;
 }
 ul {
     list-style-type: none;
@@ -32,7 +35,12 @@ ul li {
     background-color: rgb(42,26,29);
     text-align: center;
     white-space: nowrap;
-    max-height: 100px;
+    max-height: 10rem;
+    position: fixed;
+    top:0px;
+    left: 0px;
+    width: 100vw;
+    z-index: 100;
 }
 .LogoNav{
     margin-right: 30px;
@@ -44,16 +52,16 @@ ul li {
     align-items: center;
 }
 /*------------------------INICIO------------------------*/
-#id-inicio,#id-combos,#id-cartelera,h2{
+#id-inicio,#id-combos,#id-cartelera,#id-admin,h2{
     color: white;
     font-family: "Teko";
     font-size: 24px;
 }
-#id-inicio,#id-combos,#id-cartelera{
+#id-inicio,#id-combos,#id-cartelera,#id-admin{
     color: rgba(255, 255, 255, 0.733);
     text-decoration: none;
 }
-#id-inicio:active,#id-combos:active,#id-cartelera:active{
+#id-inicio:active,#id-combos:active,#id-cartelera:active,#id-admin:active{
     color: white;
 }
 #sec-inicio .ContenidoPoster #GaleriaPoster .li-texto{ /* texto de la cartelera*/
